# engine

./: .gitignore  CMakeLists.simple.txt  CMakeLists.txt  Dockerfile  Makefile  Makefile.headless  Makefile.simple  README.md  build-windows.bat  build.bat  build.sh  exported_sphere.json  exported_torus.json  run_editor.py  vcpkg.json
.github/workflows/: README.md  build.yml  ci-cd.yml  dependency-update.ymls  deploy.yml  msvc-build.yml  security.ymls  test-editor.ymls
c_map_editor/: CHANGELOG.md  LICENSE  Makefile  Makefile.windows  Makefiles  README.md  WINDOWS_BUILD.md  WINDOWS_BUILD_FIX.md  build.bat  build.sh  build_windows.sh  editor.c  editor.h  gl_compat.h  iges_loader.c  iges_loader.h  main.c  nurbs_map_editor.desktop  nurbs_map_editor.rc  nurbs_primitives.c  nurbs_primitives.h  win_compat.h  windows_build_fix.patch
map_editor/: igs_import_dialog.py  igs_parser.py  nurbs_editor.py  nurbs_renderer.py  requirements.txt
resources/: style.css
sample_maps/: demo_scene.map
src/: file_io.c  file_io.h  fps_engine.c  fps_engine.h  fps_engine_backup.c  gl_compat.h  hierarchy_panel.c  hierarchy_panel.h  main.c  map_loader.c  map_loader.h  math_utils.c  nurbs.c  nurbs.h  nurbs_fps_legacy.c  nurbs_headless.c  property_panel.c  property_panel.h  renderer.c  renderer.h  simple_main.c  tools.c  tools.h  ui_builder.c  ui_builder.h  viewport.c  viewport.h
